# rust-cli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs
